# prax-client

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
Includes/ImGui/: CMakeLists.txt  imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_win32.cpp
Includes/Kiero/: CMakeLists.txt  README.md  kiero.cpp  kiero.h
Includes/Sockets/: CTestTestfile.cmake  cmake_install.cmake
Includes/Sockets/sioclient/: sioclientTargets.cmake
Includes/Themida/: CMakeLists.txt
Includes/libhat/: CMakeLists.txt
Includes/magicenum/: CMakeLists.txt
Includes/minhook/: CMakeLists.txt
Includes/xor/: CMakeLists.txt
src/: dllmain.cpp  pch.cpp  pch.h
src/Prax/: ExceptionHandler.cpp  ExceptionHandler.h  Prax.cpp  Prax.h  PrefManager.cpp  PrefManager.h
src/Prax/Command/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
src/Prax/Command/Commands/: Bind.cpp  Bind.h  Binds.cpp  Binds.h  CheckAllStats.cpp  CheckAllStats.h  CheckAllUsers.cpp  CheckAllUsers.h  CheckUser.cpp  CheckUser.h  ClientName.cpp  ClientName.h  Config.cpp  Config.h  DamageTest.cpp  DamageTest.h  Eject.cpp  Eject.h  FriendsCommand.cpp  FriendsCommand.h  Guiscale.cpp  Guiscale.h  Help.cpp  Help.h  HideCommand.cpp  HideCommand.h  Hivekick.cpp  Hivekick.h  Hivestats.cpp  Hivestats.h  OnlineCheck.cpp  OnlineCheck.h  Panic.cpp  Panic.h  Queue.cpp  Queue.h  Set.cpp  Set.h  SevenDay.cpp  SevenDay.h  (+14 more)
src/Prax/Config/: ConfigManager.cpp  ConfigManager.h
src/Prax/Hook/: Detour.cpp  Detour.h  Hook.cpp  Hook.h  HookManager.cpp  HookManager.h
src/Prax/Hook/Hooks/: ActorIsInvisible.cpp  ActorIsInvisible.h  ActorRenderDispatcher.cpp  ActorRenderDispatcher.h  ActorSetNametag.cpp  ActorSetNametag.h  ActorSwing.cpp  ActorSwing.h  BaseTick.cpp  BaseTick.h  BlockSourceGetBlock.cpp  BlockSourceGetBlock.h  ContainerScreenControllerHook.cpp  ContainerScreenControllerHook.h  D3D.cpp  D3D.h  DimensionH.cpp  DimensionH.h  GamemodeAttack.cpp  GamemodeAttack.h  GamemodeBuildBlock.cpp  GamemodeBuildBlock.h  GamemodeGetPickRange.cpp  GamemodeGetPickRange.h  ItemUseSlowdownSystem.cpp  ItemUseSlowdownSystem.h  KeyMap.cpp  KeyMap.h  LevelRendererPlayerHooks.cpp  LevelRendererPlayerHooks.h  Mouse.cpp  Mouse.h  NoRenderHooks.cpp  NoRenderHooks.h  OverworldDimensionHooks.cpp  OverworldDimensionHooks.h  PacketHandler.cpp  PacketHandler.h  PacketSender.cpp  PacketSender.h  (+12 more)
src/Prax/Module/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
src/Prax/Module/Modules/Combat/: AimAssist.cpp  AimAssist.h  Antibot.cpp  Antibot.h  Aura.cpp  Aura.h  AutoBow.cpp  AutoBow.h  AutoZap.cpp  AutoZap.h  InfiniteAura.cpp  InfiniteAura.h  Reach.cpp  Reach.h  TriggerBot.cpp  TriggerBot.h
src/Prax/Module/Modules/Misc/: AntiCheatDetector.cpp  AntiCheatDetector.h  Anticheat.cpp  Anticheat.h  AutoDefend.cpp  AutoDefend.h  AutoDodge.cpp  AutoDodge.h  AutoHvH.cpp  AutoHvH.h  AutoLootbox.cpp  AutoLootbox.h  AutoQueue.cpp  AutoQueue.h  AutoSnipe.cpp  AutoSnipe.h  Desync.cpp  Desync.h  DeviceIDSpoof.cpp  DeviceIDSpoof.h  Disabler.cpp  Disabler.h  Franky.cpp  Franky.h  KickCodes.cpp  KickCodes.h  KickSounds.cpp  KickSounds.h  Killsults.cpp  Killsults.h  LeaveNotifs.cpp  LeaveNotifs.h  NetSkip.cpp  NetSkip.h  NoFilter.cpp  NoFilter.h  OreMiner.cpp  OreMiner.h  PacketLogger.cpp  PacketLogger.h  (+8 more)
src/Prax/Module/Modules/Movement/: AirJump.cpp  AirJump.h  AntiImmobile.cpp  AntiImmobile.h  AutoJump.cpp  AutoJump.h  AutoSprint.cpp  AutoSprint.h  DamageBoost.cpp  DamageBoost.h  DamageFly.cpp  DamageFly.h  FastStop.cpp  FastStop.h  Fly.cpp  Fly.h  FollowBot.cpp  FollowBot.h  InvMove.cpp  InvMove.h  LongJump.cpp  LongJump.h  NoJumpDelay.cpp  NoJumpDelay.h  NoLagBack.cpp  NoLagBack.h  NoSlowDown.cpp  NoSlowDown.h  Phase.cpp  Phase.h  SafeWalk.cpp  SafeWalk.h  ServerSneak.cpp  ServerSneak.h  Speed.cpp  Speed.h  Spider.cpp  Spider.h  Step.cpp  Step.h  (+6 more)
src/Prax/Module/Modules/Player/: AntiRegen.cpp  AntiRegen.h  AntiVoid.cpp  AntiVoid.h  AutoSpellbook.cpp  AutoSpellbook.h  AutoTool.cpp  AutoTool.h  AutoWeb.cpp  AutoWeb.h  ChestAura.cpp  ChestAura.h  ChestStealer.cpp  ChestStealer.h  Derp.cpp  Derp.h  Extinguisher.cpp  Extinguisher.h  Freecam.cpp  Freecam.h  Friends.cpp  Friends.h  HealthAlert.cpp  HealthAlert.h  HvHRegen.cpp  HvHRegen.h  InstaBreak.cpp  InstaBreak.h  InventoryManager.cpp  InventoryManager.h  MidclickPearl.cpp  MidclickPearl.h  NoDebuff.cpp  NoDebuff.h  NoFall.cpp  NoFall.h  PacketMine.cpp  PacketMine.h  ParticleSpam.cpp  ParticleSpam.h  (+4 more)
src/Prax/Module/Modules/Visual/: AntiInvis.cpp  AntiInvis.h  ArrayList.cpp  ArrayList.h  AutoScale.cpp  AutoScale.h  BPSDisplay.cpp  BPSDisplay.h  ChinaHat.cpp  ChinaHat.h  ClickGui.cpp  ClickGui.h  Console.cpp  Console.h  DamageEffects.cpp  DamageEffects.h  ESP.cpp  ESP.h  FullBright.cpp  FullBright.h  Glint.cpp  Glint.h  HUD.cpp  HUD.h  ItemDisplay.cpp  ItemDisplay.h  ItemESP.cpp  ItemESP.h  LevelInfo.cpp  LevelInfo.h  LevelTransitions.cpp  LevelTransitions.h  Nametags.cpp  (+45 more)
src/Prax/Module/Settings/: BoolSetting.cpp  BoolSetting.h  ColorSetting.cpp  ColorSetting.h  ModeSetting.cpp  ModeSetting.h  NumberSetting.cpp  NumberSetting.h  Setting.cpp  Setting.h  SettingGroup.cpp  SettingGroup.h
src/Prax/SDK/: SigManager.cpp  SigManager.h
src/Prax/SDK/Game/: Minecraft.cpp  Minecraft.h
src/Prax/Scripting/: ScriptManager.cpp  ScriptManager.h  Scripting.cpp  Scripting.h
src/Prax/UI/: ClickGui.cpp  ClickGui.h  GUIManager.cpp  GUIManager.h  NewClickGui.cpp  NewClickGui.h  Notifications.cpp  Notifications.h  ScriptGUI.cpp  ScriptGUI.h  ThemeManager.cpp  ThemeManager.h  UIElement.cpp  UIElement.h
src/Prax/Utils/: Audio.cpp  Audio.h  Math.cpp  Math.h  Misc.cpp  Misc.h  String.cpp  String.h
src/Prax/Utils/Render/: ColorUtil.cpp  ColorUtil.h  D2D.cpp  D2D.h  Font.cpp  Font.h  ImGuiHelper.cpp  ImGuiHelper.h  ImRotateUtil.cpp  ImRotateUtil.h  Image.cpp  Image.h  Render.cpp  Render.h  Resource.cpp  Resource.h
src/Prax/Utils/System/: FileSystem.cpp  FileSystem.h  Internet.cpp  Internet.h  KeyManager.cpp  KeyManager.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  ToastManager.cpp  ToastManager.h  WSocket.cpp  WSocket.h
(+96 files in other folders)
